--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=|, initial-scale=1.0">
     <title>Js Drum Kit</title>
     <link rel="stylesheet" href="file-style.css">
+       <link rel="icon" href="/project-img/da19f5c8344dc553c5b2cc0ae662fa4d.png">
 </head>
 
 <body>
