--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <h1>Let's Beat The Drum</h1>
+    <h1>Let's Hit The Drum</h1>
     <img src="Project-img/da19f5c8344dc553c5b2cc0ae662fa4d.png" alt="Drummer" class="center">
     <div class="keys">
         <div data-key="65" class="key">
